--- a/work/index.html
+++ b/work/index.html
@@ -8,7 +8,7 @@
 <ul style="list-style-type:square;">
   <li>Сборка драйвера под определенное ядро</li>
   <li>Как посмотреть какой драйвер работает с оборудованием</li>
-  <li>Milk</li>
+  <li>Настройка моста в Linux</li>
 </ul>
 </body> 
 </html>	
