--- a/work/index.html
+++ b/work/index.html
@@ -7,8 +7,12 @@
 <body>
 <ul style="list-style-type:square;">
   <li>Сборка драйвера под определенное ядро</li>
-  <li>Как посмотреть какой драйвер работает с оборудованием</li>
+  <li><a href="#point1">Как посмотреть какой драйвер работает с оборудованием</li>
   <li>Настройка моста в Linux</li>
 </ul>
+  <h2 id="point1">Как посмотреть какой драйвер работает с оборудованием</h2>
+  <p>
+    
+  </p>
 </body> 
 </html>	
