--- a/work/index.html
+++ b/work/index.html
@@ -7,12 +7,19 @@
 <body>
 <ul style="list-style-type:square;">
   <li>Сборка драйвера под определенное ядро</li>
-  <li><a href="#point1">Как посмотреть какой драйвер работает с оборудованием</li>
-  <li>Настройка моста в Linux</li>
+  <li><a href="#point1">Как посмотреть какой драйвер работает с оборудованием</a></li>
+  <li><a href="#point2">Настройка моста в Linux</a></li>
 </ul>
   <h2 id="point1">Как посмотреть какой драйвер работает с оборудованием</h2>
   <p>
     
+  </p>
+  <h3 id="point2" >Настройка моста в Linux утилитой bridge-utils</h3>
+  <p>
+    Перед настройкой моста необходимо посмотреть какие интефейсы существуют на компьютере. Это можно сделать с помощью команды
+    <code>
+      ip a
+    </code>
   </p>
 </body> 
 </html>	
