--- a/work/index.html
+++ b/work/index.html
@@ -16,10 +16,13 @@
   </p>
   <h3 id="point2" >Настройка моста в Linux утилитой bridge-utils</h3>
   <p>
+    Устанавливаем утилиты для работы с мостами на Линукс, если они еще не установлены:
+    <div><code> sudo apt install bridge-utils </code></div>
+    
     Перед настройкой моста необходимо посмотреть какие интефейсы существуют на компьютере. Это можно сделать с помощью команды
-    <code>
-      ip a
-    </code>
+    <div><code> ip a  </code></div>
+
+    Далее отключаются все интерфейсы которые будут входить в состав моста.
   </p>
 </body> 
 </html>	
