--- a/work/index.html
+++ b/work/index.html
@@ -6,23 +6,52 @@
 </head>
 <body>
 <ul style="list-style-type:square;">
-  <li>Сборка драйвера под определенное ядро</li>
-  <li><a href="#point1">Как посмотреть какой драйвер работает с оборудованием</a></li>
-  <li><a href="#point2">Настройка моста в Linux</a></li>
+  <li><a href="#point1">Сборка драйвера под определенное ядро</li>
+  <li><a href="#point2">Как посмотреть какой драйвер работает с оборудованием</a></li>
+  <li><a href="#point3">Настройка моста в Linux</a></li>
 </ul>
-  <h2 id="point1">Как посмотреть какой драйвер работает с оборудованием</h2>
+  <h3 id="point1">Сборка драйвера под определенное ядро</h3>
   <p>
-    
   </p>
-  <h3 id="point2" >Настройка моста в Linux утилитой bridge-utils</h3>
+  <h3 id="point2">Как посмотреть какой драйвер работает с оборудованием</h3>
   <p>
-    Устанавливаем утилиты для работы с мостами на Линукс, если они еще не установлены:
-    <div><code> sudo apt install bridge-utils </code></div>
-    
-    Перед настройкой моста необходимо посмотреть какие интефейсы существуют на компьютере. Это можно сделать с помощью команды
-    <div><code> ip a  </code></div>
+    Чтобы посмотреть какой драйвер работает с конкретным оборудованием установленным в PCI шину необходимо набрать команду<br>
+    <code> >lspci -v </code>
+  </p>
+  <h3 id="point3" >Настройка моста в Linux утилитой bridge-utils</h3>
+  <p>
+    Устанавливаем утилиты для работы с мостами на Линукс, если они еще не установлены:<br>
+    <code> >sudo apt install bridge-utils </code>
+  </p>
+  <p>
+    Перед настройкой моста необходимо посмотреть какие интефейсы существуют на компьютере. Это можно сделать с помощью команды<br>
+    <code> >ip a  </code>
+  </p>
+  <p>
+    Далее отключаются все интерфейсы которые будут входить в состав моста.<br>
+    <code> >ip link set eth0 down </code><br>
+    <code> >ip link set eth1 down </code><br>
+    Эти команды обязательны в любом случае, даже если до этого не производилась настройка интерфейсов. Иначе мост не поднимется.
+  </p>
+  <p>
+    Далее создаем мост<br>
+    <code> >brctl addbr br0</code>
+  </p>
+  <p>
+    Добавляем необходимые интерфейсы в мост<br>
+    <code> >brctl addif br0 eth0 eth1</code>
+    Для нейтрализации петель подключаем STP протокол<br>
+    <code> >brctl stp br0 on</code>
+  </p>
+  <p>
+    Поднимаем интерфейсы:<br>
+    <code> >ip link set eth0 up </code><br>
+    <code> >ip link set eth1 up </code>
+  </p>
+  <p>
+    Поднимаем мост:<br>
+    <code> >ip link set br0 down </code>
+  </p>
 
-    Далее отключаются все интерфейсы которые будут входить в состав моста.
-  </p>
-</body> 
-</html>	
+</body>
+</html>
