--- a/work/index.html
+++ b/work/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <ul style="list-style-type:square;">
-  <li><a href="#point1">Сборка драйвера под определенное ядро</li>
+  <li><a href="#point1">Сборка драйвера под определенное ядро</a></li>
   <li><a href="#point2">Как посмотреть какой драйвер работает с оборудованием</a></li>
   <li><a href="#point3">Настройка моста в Linux</a></li>
 </ul>
