--- a/work/index.html
+++ b/work/index.html
@@ -9,6 +9,7 @@
   <li><a href="#point1">Сборка драйвера под определенное ядро</a></li>
   <li><a href="#point2">Как посмотреть какой драйвер работает с оборудованием</a></li>
   <li><a href="#point3">Настройка моста в Linux</a></li>
+  <li><a href="#point4">Сборка драйвера rtl8152</a></li>
 </ul>
   <h3 id="point1">Сборка драйвера под определенное ядро</h3>
   <p>
@@ -52,6 +53,15 @@
     Поднимаем мост:<br>
     <code> >ip link set br0 down </code>
   </p>
+  <h3 id="point4">Сборка драйвера rtl8152</h3>
+  <ul style="list-style-type:square;">
+  <li><a href="#t2">Скачать исходный код</a></li>
+  <div>
+  </div>
+  <li><a href="#t2">Как посмотреть какой драйвер работает с оборудованием</a></li>
+  <li><a href="#t3">Настройка моста в Linux</a></li>
+  <li><a href="#t4">Сборка драйвера rtl8152</a></li>
+</ul>
 
 </body>
 </html>
