--- a/work/index.html
+++ b/work/index.html
@@ -59,8 +59,14 @@
   <div>
   </div>
   <li><a href="#t2">Как посмотреть какой драйвер работает с оборудованием</a></li>
+  <div>
+  </div>
   <li><a href="#t3">Настройка моста в Linux</a></li>
+  <div>
+  </div>
   <li><a href="#t4">Сборка драйвера rtl8152</a></li>
+  <div>
+  </div>
 </ul>
 
 </body>
