--- a/work/index.html
+++ b/work/index.html
@@ -54,10 +54,11 @@
     <code> >ip link set br0 down </code>
   </p>
   <h3 id="point4">Сборка драйвера rtl8152</h3>
-  <ul style="list-style-type:square;">
+  <ul style="list-style-type:decimal;">
   <li><a href="#t2">Скачать исходный код</a></li>
   <div>
-  </div>
+  Исходный код можно скачать с сайта Realtek
+  </div class="button" hidden="" onclick=press()>
   <li><a href="#t2">Как посмотреть какой драйвер работает с оборудованием</a></li>
   <div>
   </div>
