--- a/WEB/html.html
+++ b/WEB/html.html
@@ -11,12 +11,15 @@
 	<h2>HTML5</h2>
 	<a href=https://html5beginner.github.io/html/html_head.html>html</a><br>
 	<a href=https://www.w3schools.com/html/html_quotation_elements.asp>HTML Tutorial</a><br>
-	<a href=https://htmlbook.ru/>Html Book</a>
-	<a href=https://www.codecademy.com/>codecacademy</a>
-	<a href=https://html5book.ru/https://html5book.ru/>html5book</a>
+	<a href=https://htmlbook.ru/>Html Book</a><br>
+	<a href=https://www.codecademy.com/>codecacademy</a><br>
+	<a href=https://html5book.ru/>html5book</a><br>
+	<a href=https://doka.guide/>doka</a><br>
+	<a href=https://developer.mozilla.org/ru/>mozilla doc</a>
 	<h2>CSS</h2>
 	<h2>JavaScript</h2>
 	<a href=https://javascript.ru/ui/show-hide-toggle>Правильные show/hide/toggle</a><br>
+	<a href=https://learn.javascript.ru/>javascript</a>
  ...    
 </body>
 </html>
