--- a/work/index.html
+++ b/work/index.html
@@ -65,7 +65,7 @@
   <li><a href="#t3">Настройка моста в Linux</a></li>
   <div>
   </div>
-  <li><a href="#t4">Сборка драйвера rtl8152</a></li>
+  <li><a href=rtl8152.md>Сборка драйвера rtl8152</a></li>
   <div>
   </div>
 </ul>
